--- a/wanderlust/src/views/Tour.css
+++ b/wanderlust/src/views/Tour.css
@@ -112,6 +112,7 @@
   margin-top: 3rem;
   display: flex;
   margin-right: 8rem;
+  margin-bottom: 1rem;
 }
 
 .info-symbol {
@@ -119,9 +120,10 @@
   background-repeat: no-repeat;
   width: 8rem;
   height: 5rem;
-  margin-right: 1rem;
   margin-top: 2rem;
   margin-left: 0.2rem;
+  position: absolute;
+  left: 25.8rem;
 }
 
 .clock-wrapper {
