--- a/wanderlust/src/views/Tour.css
+++ b/wanderlust/src/views/Tour.css
@@ -93,8 +93,6 @@
 
 .tour-information-wrapper {
   margin: 0 auto;
-  margin-left: 10vw;
-  margin-right: 15vw;
   width: 80rem;
   height: 40rem;
   margin-bottom: 5rem;
@@ -105,7 +103,6 @@
 .tour-information-left {
   display: flex;
   flex-direction: column;
-  width: 70%;
 }
 
 .info-wrapper {
@@ -219,6 +216,7 @@
   justify-content: space-around;
   border-bottom: 1px solid grey;
   margin-left: 2rem;
+  width: 20rem;
 }
 
 .price {
@@ -253,6 +251,7 @@
   display: flex;
   justify-content: center;
   margin-top: 0.4rem;
+  width: 24rem;
 }
 
 .heart-symbol {
@@ -297,4 +296,12 @@
 
 .description-header {
   margin-left: 0.9rem;
+}
+
+.guide-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 20rem;
 }
