--- a/wanderlust/src/views/Tour.css
+++ b/wanderlust/src/views/Tour.css
@@ -15,12 +15,13 @@
 .bg-image {
   background-image: url(/assets/running-in-forrest.jpg);
   background-repeat: no-repeat;
-  background-position: top;
+  background-position: top center ;
   padding-bottom: 20rem;
   width: 80rem;
   min-width: 80rem;
-  height: 20rem;
-  min-height: 20rem;
+  height: 40rem;
+  min-height: 40rem;
+  
 }
 
 .tour-header {
@@ -42,14 +43,14 @@
 
 .nav-middle {
   margin-left: 12rem;
-  margin-top: 2rem;
+  margin-top: 0rem;
 }
 
 .nav-right {
   display: flex;
   justify-content: space-around;
-  margin-top: 2rem;
-  margin-left: 25rem;
+  margin-top: 0rem;
+  margin-left: 20rem;
 }
 
 .nav-right a {
@@ -92,8 +93,6 @@
 
 .tour-information-wrapper {
   margin: 0 auto;
-  margin-left: 10vw;
-  margin-right: 15vw;
   width: 80rem;
   height: 40rem;
   margin-bottom: 5rem;
@@ -104,7 +103,6 @@
 .tour-information-left {
   display: flex;
   flex-direction: column;
-  width: 70%;
 }
 
 .info-wrapper {
@@ -117,9 +115,8 @@
 .info-symbol {
   background-image: url(/assets/info-symbol.png);
   background-repeat: no-repeat;
-  width: 8rem;
+  width: 3rem;
   height: 5rem;
-  margin-right: 1rem;
   margin-top: 2rem;
   margin-left: 0.2rem;
 }
@@ -218,7 +215,7 @@
   justify-content: space-around;
   border-bottom: 1px solid grey;
   margin-left: 2rem;
-  margin-right: 2rem;
+  width: 20rem;
 }
 
 .price {
@@ -233,7 +230,7 @@
   align-items: center;
 }
 
-.tiny {
+.price-tiny {
   font-size: 1.1rem;
 }
 
@@ -253,6 +250,7 @@
   display: flex;
   justify-content: center;
   margin-top: 0.4rem;
+  width: 24rem;
 }
 
 .heart-symbol {
@@ -262,16 +260,34 @@
   height: 5rem;
 }
 
+.heart-symbol:hover {
+  background-image: url(/assets/heart-red-hover-over-half-filled.png);
+}
+
+.heart-symbol:active {
+  background-image: url(/assets/heart-red-filled.png);
+}
+
 .favorites {
   font-size: 1.3rem;
   font-weight: 600;
 }
 
-.avatar {
+.avatar_dracarys {
   background-image: url(/assets/avatar_dracarys.png);
   background-repeat: no-repeat;
   width: 30rem;
-  height: 50rem;
+  height: 13rem;
+  margin-right: 1rem;
+  margin-left: 5rem;
+  margin-top: 2rem;
+}
+
+.avatar_reeves {
+  background-image: url(/assets/avatar_reeves.png);
+  background-repeat: no-repeat;
+  width: 30rem;
+  height: 13rem;
   margin-right: 1rem;
   margin-left: 5rem;
   margin-top: 2rem;
@@ -279,7 +295,22 @@
 
 .avatar-text {
   margin-left: 7rem;
-  margin-bottom: 10.5rem;
   font-size: 1.3rem;
   font-weight: 600;
+}
+.tiny {
+    margin-left: 2rem;
+    text-align: center;
+}
+
+.description-header {
+  margin-left: 1.2rem;
+}
+
+.guide-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 20rem;
 }
