styling changes in dashboard background image

--- a/wanderlust/src/views/AddTour.css
+++ b/wanderlust/src/views/AddTour.css
@@ -1,6 +1,6 @@
 .addTourHeader {
   background-color: white;
-  height: 70vh;
+  height: 50vh;
 }
 
 .addTourNav {
@@ -36,22 +36,8 @@
 
 .title::placeholder {
   font-size: 1.6rem;
-  font-weight: bold;
   color: black;
-  padding-left: 0.5rem;
-}
-
-.category {
-  width: 10rem;
-  color: black;
-  background: white;
-  padding-left: 0.5rem;
-}
-
-.category::placeholder {
-  color: black;
-  padding-left: 0.5rem;
-  font-weight: 500;
+  padding-left: 0.8rem;
 }
 
 .addThumbnail {
@@ -63,23 +49,24 @@
 }
 
 .addTourAboutWrapper {
-  margin-top: 21rem;
   display: flex;
   justify-content: center;
+  margin-top: 5rem;
 }
 
 .addTourAbout {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  padding-left: 4rem;
-  width: 60%;
+  align-items: center;
+  width: 100%;
   /* margin: 2rem; */
 }
 
 .info {
   display: flex;
   align-items: center;
+  justify-content: center;
+  padding: 0;
 }
 
 .infoSymbol {
@@ -187,7 +174,7 @@
 }
 
 .tourAddress {
-  margin-bottom: 1rem;  
+  margin-bottom: 1rem;
   width: 21.5rem;
   background: #f2f2f2;
   border: none;
@@ -197,18 +184,19 @@
 }
 
 .btnAddTour {
-  margin-right: 1rem;
+  /* margin-right: 1rem; */
   padding-left: 3rem;
   padding-right: 3rem;
   border-radius: 5px;
   font-size: 1.2rem;
-  margin-left: 3.9rem;
-  }
+  /* margin-left: 3.9rem; */
+}
 
 .btnCancel {
   border-radius: 5px;
-  padding-left: 15rem;
+  padding-left: 3rem;
   padding-right: 3rem;
+  border-radius: 5px;
   font-size: 1.2rem;
 }
 
