--- a/wanderlust/src/views/Tour.css
+++ b/wanderlust/src/views/Tour.css
@@ -1,7 +1,10 @@
 .tour-wrapper {
   background: rgb(24, 11, 11);
-  height: 40rem;
-  min-height: 40rem;
+  /* height: 40rem;
+  min-height: 40rem; */
+  display: flex;
+  flex-direction: column;
+  height: 80vh;
   width: 100vw;
 }
 
@@ -15,13 +18,12 @@
 .bg-image {
   background-image: url(/assets/running-in-forrest.jpg);
   background-repeat: no-repeat;
-  background-position: top center ;
+  background-position: top center;
   padding-bottom: 20rem;
   width: 80rem;
   min-width: 80rem;
   height: 40rem;
   min-height: 40rem;
-  
 }
 
 .tour-header {
@@ -92,39 +94,47 @@
 }
 
 .tour-information-wrapper {
+  width: 80%;
+  height: 100%;
   margin: 0 auto;
-  width: 80rem;
-  height: 40rem;
   margin-bottom: 5rem;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .tour-information-left {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 60%;
+  margin-top: 5rem;
 }
 
 .info-wrapper {
-  margin-left: 14rem;
-  margin-top: 3rem;
+  /* margin-left: 14rem; */
+  /* margin-top: 3rem; */
   display: flex;
-  margin-right: 8rem;
+  /* margin-right: 8rem; */
 }
 
 .info-symbol {
   background-image: url(/assets/info-symbol.png);
   background-repeat: no-repeat;
-  width: 3rem;
+  width: 9rem;
   height: 5rem;
   margin-top: 2rem;
-  margin-left: 0.2rem;
+  margin-left: 0.5rem;
 }
 
 .clock-wrapper {
-  margin-left: 14rem;
-  margin-top: 1rem;
+  /* margin-left: 14rem; */
+  /* margin-top: 1rem; */
   display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1.4rem 0;
 }
 
 .clock-symbol {
@@ -137,9 +147,11 @@
 }
 
 .people-wrapper {
-  margin-left: 14rem;
-  margin-top: 1rem;
+  /* margin-left: 14rem; */
+  /* margin-top: 1rem; */
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .people-symbol {
@@ -147,11 +159,15 @@
   background-repeat: no-repeat;
   width: 3rem;
   height: 4rem;
+  margin-top: 1.3rem;
   margin-right: 1rem;
   margin-left: 0.4rem;
 }
 
 .description-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   font-size: 1.4rem;
   font-weight: bold;
 }
@@ -162,10 +178,10 @@
 }
 
 .clock-text {
-  width: 100%;
+  /* width: 100%; */
   font-size: 1.2rem;
   font-weight: 500;
-  padding-right: 26.6rem;
+  /* padding-right: 26.6rem; */
 }
 
 .people-text {
@@ -174,10 +190,12 @@
 }
 
 .note-wrapper {
-  margin-left: 14rem;
-  margin-top: 1rem;
+  /* margin-left: 14rem; */
+  /* margin-top: 1rem; */
   display: flex;
-  margin-right: 8rem;
+  align-items: center;
+  justify-content: center;
+  /* margin-right: 8rem; */
 }
 
 .note-symbol {
@@ -189,10 +207,12 @@
 }
 
 .target-wrapper {
-  margin-left: 14rem;
-  margin-top: 1rem;
+  /* margin-left: 14rem; */
+  /* margin-top: 1rem; */
   display: flex;
-  margin-right: 8rem;
+  align-items: center;
+  justify-content: center;
+  /* margin-right: 8rem; */
 }
 
 .target-symbol {
@@ -299,12 +319,8 @@
   font-weight: 600;
 }
 .tiny {
-    margin-left: 2rem;
-    text-align: center;
-}
-
-.description-header {
-  margin-left: 1.2rem;
+  margin-left: 2rem;
+  text-align: center;
 }
 
 .guide-info {
