--- a/wanderlust/src/views/AddTour.css
+++ b/wanderlust/src/views/AddTour.css
@@ -201,6 +201,13 @@
   outline: none;
 }
 
+.address {
+  background-color: #f2f2f2 !important;
+  border-radius: 5px !important;
+  box-sizing: border-box !important;
+  height: 50px !important;
+}
+
 .btnAddTour {
   /* margin-right: 1rem; */
   padding-left: 3rem;
